force-app/main/default/objects/AOB_ReferencedData__c/AOB_ReferencedData__c.object-meta.xml
<CustomObject>
    <label>Referenced Data</label>
    <nameField>
        <label>Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referenced Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>