force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_Code__c.field-meta.xml
<CustomField>
    <fullName>AOB_Code__c</fullName>
    <description>Referenced data Code from MRI</description>
    <label>Code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>