force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>AOB_CountryCode__c</fullName>
    <description>Country code for this value</description>
    <label>Country Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>