force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_Default__c.field-meta.xml
<CustomField>
    <fullName>AOB_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates wether this value should be the default value in the front end picklists</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>