force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>AOB_FieldAPIName__c</fullName>
    <description>indicates the salesforce fieldAPI name corresponding to this Record</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>