force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_isActive__c.field-meta.xml
<CustomField>
    <fullName>AOB_isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>indicates wether this value should be shown in the front end picklists</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>