force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_Language__c.field-meta.xml
<CustomField>
    <fullName>AOB_Language__c</fullName>
    <description>Language of this record&apos;s value</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>ar</fullName>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>en_GB</fullName>
                <label>English (UK)</label>
            </value>
            <value>
                <fullName>African</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>