force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>AOB_ObjectName__c</fullName>
    <description>corresponding SF Object Name</description>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>