force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_Parent__c.field-meta.xml
<CustomField>
    <fullName>AOB_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Parent Reference Data</description>
    <label>Referenced Data</label>
    <referenceTo>AOB_ReferencedData__c</referenceTo>
    <relationshipLabel>Reference Data</relationshipLabel>
    <relationshipName>Referenced_Data</relationshipName>
    <type>Lookup</type>
</CustomField>