force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_ParentCode__c.field-meta.xml
<CustomField>
    <fullName>AOB_ParentCode__c</fullName>
    <formula>AOB_Parent__r.AOB_Code__c</formula>
    <label>Parent Code</label>
    <type>Text</type>
</CustomField>