force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_Product__c.field-meta.xml
<CustomField>
    <fullName>AOB_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Parent Product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Reference Data</relationshipLabel>
    <relationshipName>Reference_Data</relationshipName>
    <type>Lookup</type>
</CustomField>