force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>AOB_ProductCategory__c</fullName>
    <label>Product Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>