force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_SAPExternalID__c.field-meta.xml
<CustomField>
    <fullName>AOB_SAPExternalID__c</fullName>
    <description>Sap External Id</description>
    <externalId>true</externalId>
    <label>SAP External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>