force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_SAPField__c.field-meta.xml
<CustomField>
    <fullName>AOB_SAPField__c</fullName>
    <description>Sap Field Name</description>
    <label>MRI Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>