force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_Sequence__c.field-meta.xml
<CustomField>
    <fullName>AOB_Sequence__c</fullName>
    <description>Order of this value in the Front end picklist</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>