force-app/main/default/objects/AOB_ReferencedData__c/fields/AOB_Value__c.field-meta.xml
<CustomField>
    <fullName>AOB_Value__c</fullName>
    <description>Contains the label of the picklist element</description>
    <label>Value</label>
    <length>150</length>
    <type>Text</type>
</CustomField>