force-app/main/default/objects/AOB_ReferencedData__c/fields/Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Code__c</fullName>
    <formula>AOB_Parent__r.AOB_Code__c</formula>
    <label>Parent Code</label>
    <type>Text</type>
</CustomField>